gen/ddl2umltranslgrammarParser.java
// Generated from C:/Users/johanlap21/Desktop/ddl2umltranslator/grammar\ddl2umltranslgrammar.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ddl2umltranslgrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, WS=3, EQ=4, EE=5, NEQ=6, GE=7, LE=8, GT=9, LT=10, ON=11, 
		INTERVAL=12, NOW=13, TIMEFRAME=14, AND=15, OR=16, DEFAULT=17, ADD=18, 
		COLUMN=19, LPAREN=20, RPAREN=21, MUL=22, DIV=23, PLUS=24, SUB=25, SEMICOLON=26, 
		PRIMARY=27, KEY=28, AS=29, SELECT=30, FROM=31, WHERE=32, NOT=33, NULL=34, 
		UNIQUE=35, CREATE=36, ALTER=37, DROP=38, TABLE=39, FOREIGN=40, INDEX=41, 
		SEQUENCE=42, CT=43, REFERENCES=44, VIEW=45, DATATYPE=46, IDENTIFIER=47, 
		LINE_COMMENT=48, INT=49, DOUBLE=50, NEWLINE=51, STRING=52;
	public static final int
		RULE_inicio = 0, RULE_block = 1, RULE_ddlStatement = 2, RULE_createTableStatement = 3, 
		RULE_createViewStatement = 4, RULE_sqlStatement = 5, RULE_exprand = 6, 
		RULE_expror = 7, RULE_compexpr = 8, RULE_arithexpr = 9, RULE_term = 10, 
		RULE_factor = 11, RULE_atom = 12, RULE_alterTableStatement = 13, RULE_dropTableStatement = 14, 
		RULE_createIndexStatement = 15, RULE_createSequenceStatement = 16, RULE_dropIndexStatement = 17, 
		RULE_alterTableAction = 18, RULE_columnDefinition = 19, RULE_foreignKeyDefiniton = 20, 
		RULE_constraint = 21, RULE_columnName = 22, RULE_tableName = 23, RULE_indexName = 24, 
		RULE_functionName = 25, RULE_datatype = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "block", "ddlStatement", "createTableStatement", "createViewStatement", 
			"sqlStatement", "exprand", "expror", "compexpr", "arithexpr", "term", 
			"factor", "atom", "alterTableStatement", "dropTableStatement", "createIndexStatement", 
			"createSequenceStatement", "dropIndexStatement", "alterTableAction", 
			"columnDefinition", "foreignKeyDefiniton", "constraint", "columnName", 
			"tableName", "indexName", "functionName", "datatype"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'''", null, "'='", "'=='", "'<>'", "'>='", "'<='", "'>'", 
			"'<'", "'ON'", "'INTERVAL'", "'NOW'", null, "'AND'", "'OR'", "'DEFAULT'", 
			"'ADD'", "'COLUMN'", "'('", "')'", "'*'", "'/'", "'+'", "'-'", "';'", 
			"'PRIMARY'", "'KEY'", "'AS'", "'SELECT'", "'FROM'", "'WHERE'", "'NOT'", 
			"'NULL'", "'UNIQUE'", "'CREATE'", "'ALTER'", "'DROP'", "'TABLE'", "'FOREIGN'", 
			"'INDEX'", "'SEQUENCE'", "'CURRENT_TIMESTAMP'", "'REFERENCES'", "'VIEW'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "WS", "EQ", "EE", "NEQ", "GE", "LE", "GT", "LT", "ON", 
			"INTERVAL", "NOW", "TIMEFRAME", "AND", "OR", "DEFAULT", "ADD", "COLUMN", 
			"LPAREN", "RPAREN", "MUL", "DIV", "PLUS", "SUB", "SEMICOLON", "PRIMARY", 
			"KEY", "AS", "SELECT", "FROM", "WHERE", "NOT", "NULL", "UNIQUE", "CREATE", 
			"ALTER", "DROP", "TABLE", "FOREIGN", "INDEX", "SEQUENCE", "CT", "REFERENCES", 
			"VIEW", "DATATYPE", "IDENTIFIER", "LINE_COMMENT", "INT", "DOUBLE", "NEWLINE", 
			"STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ddl2umltranslgrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ddl2umltranslgrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InicioContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ddl2umltranslgrammarParser.EOF, 0); }
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddl2umltranslgrammarListener ) ((ddl2umltranslgrammarListener)listener).enterInicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddl2umltranslgrammarListener ) ((ddl2umltranslgrammarListener)listener).exitInicio(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			block();
			setState(55);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public List<DdlStatementContext> ddlStatement() {
			return getRuleContexts(DdlStatementContext.class);
		}
		public DdlStatementContext ddlStatement(int i) {
			return getRuleContext(DdlStatementContext.class,i);
		}
		public List<TerminalNode> EOF() { return getTokens(ddl2umltranslgrammarParser.EOF); }
		public TerminalNode EOF(int i) {
			return getToken(ddl2umltranslgrammarParser.EOF, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ddl2umltranslgrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ddl2umltranslgrammarParser.NEWLINE, i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddl2umltranslgrammarListener ) ((ddl2umltranslgrammarListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddl2umltranslgrammarListener ) ((ddl2umltranslgrammarListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 281956013047808L) != 0)) {
				{
				{
				setState(57);
				ddlStatement();
				setState(65);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(61);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWLINE) {
						{
						{
						setState(58);
						match(NEWLINE);
						}
						}
						setState(63);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					break;
				case 2:
					{
					setState(64);
					match(EOF);
					}
					break;
				}
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DdlStatementContext extends ParserRuleContext {
		public CreateTableStatementContext createTableStatement() {
			return getRuleContext(CreateTableStatementContext.class,0);
		}
		public AlterTableStatementContext alterTableStatement() {
			return getRuleContext(AlterTableStatementContext.class,0);
		}
		public DropTableStatementContext dropTableStatement() {
			return getRuleContext(DropTableStatementContext.class,0);
		}
		public CreateIndexStatementContext createIndexStatement() {
			return getRuleContext(CreateIndexStatementContext.class,0);
		}
		public DropIndexStatementContext dropIndexStatement() {
			return getRuleContext(DropIndexStatementContext.class,0);
		}
		public CreateViewStatementContext createViewStatement() {
			return getRuleContext(CreateViewStatementContext.class,0);
		}
		public CreateSequenceStatementContext createSequenceStatement() {
			return getRuleContext(CreateSequenceStatementContext.class,0);
		}
		public TerminalNode LINE_COMMENT() { return getToken(ddl2umltranslgrammarParser.LINE_COMMENT, 0); }
		public DdlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ddlStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddl2umltranslgrammarListener ) ((ddl2umltranslgrammarListener)listener).enterDdlStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddl2umltranslgrammarListener ) ((ddl2umltranslgrammarListener)listener).exitDdlStatement(this);
		}
	}

	public final DdlStatementContext ddlStatement() throws RecognitionException {
		DdlStatementContext _localctx = new DdlStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ddlStatement);
		try {
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				createTableStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				alterTableStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				dropTableStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(75);
				createIndexStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(76);
				dropIndexStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(77);
				createViewStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(78);
				createSequenceStatement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(79);
				match(LINE_COMMENT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreateTableStatementContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(ddl2umltranslgrammarParser.CREATE, 0); }
		public TerminalNode TABLE() { return getToken(ddl2umltranslgrammarParser.TABLE, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(ddl2umltranslgrammarParser.LPAREN, 0); }
		public List<ColumnDefinitionContext> columnDefinition() {
			return getRuleContexts(ColumnDefinitionContext.class);
		}
		public ColumnDefinitionContext columnDefinition(int i) {
			return getRuleContext(ColumnDefinitionContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(ddl2umltranslgrammarParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(ddl2umltranslgrammarParser.SEMICOLON, 0); }
		public List<ForeignKeyDefinitonContext> foreignKeyDefiniton() {
			return getRuleContexts(ForeignKeyDefinitonContext.class);
		}
		public ForeignKeyDefinitonContext foreignKeyDefiniton(int i) {
			return getRuleContext(ForeignKeyDefinitonContext.class,i);
		}
		public CreateTableStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createTableStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddl2umltranslgrammarListener ) ((ddl2umltranslgrammarListener)listener).enterCreateTableStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddl2umltranslgrammarListener ) ((ddl2umltranslgrammarListener)listener).exitCreateTableStatement(this);
		}
	}

	public final CreateTableStatementContext createTableStatement() throws RecognitionException {
		CreateTableStatementContext _localctx = new CreateTableStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_createTableStatement);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(CREATE);
			setState(83);
			match(TABLE);
			setState(84);
			tableName();
			setState(85);
			match(LPAREN);
			setState(86);
			columnDefinition();
			setState(91);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(87);
					match(T__0);
					setState(88);
					columnDefinition();
					}
					} 
				}
				setState(93);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(94);
				match(T__0);
				setState(95);
				foreignKeyDefiniton();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			match(RPAREN);
			setState(102);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreateViewStatementContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(ddl2umltranslgrammarParser.CREATE, 0); }
		public TerminalNode VIEW() { return getToken(ddl2umltranslgrammarParser.VIEW, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode AS() { return getToken(ddl2umltranslgrammarParser.AS, 0); }
		public SqlStatementContext sqlStatement() {
			return getRuleContext(SqlStatementContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(ddl2umltranslgrammarParser.SEMICOLON, 0); }
		public CreateViewStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createViewStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddl2umltranslgrammarListener ) ((ddl2umltranslgrammarListener)listener).enterCreateViewStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddl2umltranslgrammarListener ) ((ddl2umltranslgrammarListener)listener).exitCreateViewStatement(this);
		}
	}

	public final CreateViewStatementContext createViewStatement() throws RecognitionException {
		CreateViewStatementContext _localctx = new CreateViewStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_createViewStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(CREATE);
			setState(105);
			match(VIEW);
			setState(106);
			tableName();
			setState(107);
			match(AS);
			setState(108);
			sqlStatement();
			setState(109);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SqlStatementContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(ddl2umltranslgrammarParser.SELECT, 0); }
		public List<ColumnNameContext> columnName() {
			return getRuleContexts(ColumnNameContext.class);
		}
		public ColumnNameContext columnName(int i) {
			return getRuleContext(ColumnNameContext.class,i);
		}
		public TerminalNode FROM() { return getToken(ddl2umltranslgrammarParser.FROM, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode WHERE() { return getToken(ddl2umltranslgrammarParser.WHERE, 0); }
		public ExprandContext exprand() {
			return getRuleContext(ExprandContext.class,0);
		}
		public SqlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddl2umltranslgrammarListener ) ((ddl2umltranslgrammarListener)listener).enterSqlStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddl2umltranslgrammarListener ) ((ddl2umltranslgrammarListener)listener).exitSqlStatement(this);
		}
	}

	public final SqlStatementContext sqlStatement() throws RecognitionException {
		SqlStatementContext _localctx = new SqlStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sqlStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(SELECT);
			setState(112);
			columnName();
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(113);
				match(T__0);
				setState(114);
				columnName();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			match(FROM);
			setState(121);
			tableName();
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(122);
				match(WHERE);
				setState(123);
				exprand();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprandContext extends ParserRuleContext {
		public List<ExprorContext> expror() {
			return getRuleContexts(ExprorContext.class);
		}
		public ExprorContext expror(int i) {
			return getRuleContext(ExprorContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(ddl2umltranslgrammarParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(ddl2umltranslgrammarParser.AND, i);
		}
		public ExprandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddl2umltranslgrammarListener ) ((ddl2umltranslgrammarListener)listener).enterExprand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddl2umltranslgrammarListener ) ((ddl2umltranslgrammarListener)listener).exitExprand(this);
		}
	}

	public final ExprandContext exprand() throws RecognitionException {
		ExprandContext _localctx = new ExprandContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_exprand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			expror();
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(127);
				match(AND);
				setState(128);
				expror();
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprorContext extends ParserRuleContext {
		public List<CompexprContext> compexpr() {
			return getRuleContexts(CompexprContext.class);
		}
		public CompexprContext compexpr(int i) {
			return getRuleContext(CompexprContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(ddl2umltranslgrammarParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(ddl2umltranslgrammarParser.OR, i);
		}
		public ExprorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expror; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddl2umltranslgrammarListener ) ((ddl2umltranslgrammarListener)listener).enterExpror(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddl2umltranslgrammarListener ) ((ddl2umltranslgrammarListener)listener).exitExpror(this);
		}
	}

	public final ExprorContext expror() throws RecognitionException {
		ExprorContext _localctx = new ExprorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expror);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			compexpr();
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(135);
				match(OR);
				setState(136);
				compexpr();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompexprContext extends ParserRuleContext {
		public List<ArithexprContext> arithexpr() {
			return getRuleContexts(ArithexprContext.class);
		}
		public ArithexprContext arithexpr(int i) {
			return getRuleContext(ArithexprContext.class,i);
		}
		public TerminalNode EQ() { return getToken(ddl2umltranslgrammarParser.EQ, 0); }
		public TerminalNode NEQ() { return getToken(ddl2umltranslgrammarParser.NEQ, 0); }
		public TerminalNode LT() { return getToken(ddl2umltranslgrammarParser.LT, 0); }
		public TerminalNode GT() { return getToken(ddl2umltranslgrammarParser.GT, 0); }
		public TerminalNode LE() { return getToken(ddl2umltranslgrammarParser.LE, 0); }
		public TerminalNode GE() { return getToken(ddl2umltranslgrammarParser.GE, 0); }
		public CompexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddl2umltranslgrammarListener ) ((ddl2umltranslgrammarListener)listener).enterCompexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddl2umltranslgrammarListener ) ((ddl2umltranslgrammarListener)listener).exitCompexpr(this);
		}
	}

	public final CompexprContext compexpr() throws RecognitionException {
		CompexprContext _localctx = new CompexprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_compexpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			arithexpr(0);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2000L) != 0)) {
				{
				setState(143);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 2000L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(144);
				arithexpr(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArithexprContext extends ParserRuleContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public ArithexprContext arithexpr() {
			return getRuleContext(ArithexprContext.class,0);
		}
		public TerminalNode PLUS() { return getToken(ddl2umltranslgrammarParser.PLUS, 0); }
		public TerminalNode SUB() { return getToken(ddl2umltranslgrammarParser.SUB, 0); }
		public ArithexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddl2umltranslgrammarListener ) ((ddl2umltranslgrammarListener)listener).enterArithexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddl2umltranslgrammarListener ) ((ddl2umltranslgrammarListener)listener).exitArithexpr(this);
		}
	}

	public final ArithexprContext arithexpr() throws RecognitionException {
		return arithexpr(0);
	}
